--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AA2_Ahorcado_RogerAlamanac"
         tools:targetApi="31">
-        <activity
-            android:name=".MainActivity"
-            android:exported="false" />
+
         <activity
             android:name=".SplashScreen"
             android:exported="true">
@@ -24,6 +22,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".LevelSelector"
+            android:exported="false" />
     </application>
 
 </manifest>
